--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter",
-  "homepage": "https://wctd.github.io/react-starter",
+  "homepage": "https://sysyali.github.io/fantastic-adventure/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
